@@ -1,3 +1,4 @@
+(ENHANCE) Use, for the time being,  Tk default fonts
 (BUG FIX) Fix the Help->Online manuals menu entry
 (INTERNAL) Update tkTable to version 2.10
 (INTERNAL) Update xmplib.c from Tix source following former SN versions
